# SorteryLib

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  structs.rs
tests/: integration_tests.rs
