[package]
name = "sorterylib"
version = "0.3.2"
edition = "2021"

description = "A fast, basic, cross-platform file sorter library."
documentation = "https://docs.rs/crate/sorterylib/"
license = "MIT"
repository = "https://github.com/SamMatzko/SorteryLib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
filetime = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"